AzureCert/templates/basic-vnet.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualNetworks_labnet_name": {
      "defaultValue": null,
      "type": "String"
    },
    "networkSecurityGroups_private_nsg_name": {
      "defaultValue": null,
      "type": "String"
    },
    "networkSecurityGroups_public_web_nsg_name": {
      "defaultValue": null,
      "type": "String"
    },
    "networkWatchers_australiaeast_watcher_name": {
      "defaultValue": null,
      "type": "String"
    },
    "subnets_public_name": {
      "defaultValue": null,
      "type": "String"
    },
    "subnets_private_name": {
      "defaultValue": null,
      "type": "String"
    },
    "securityRules_ssh_name": {
      "defaultValue": null,
      "type": "String"
    },
    "securityRules_ssh_name_1": {
      "defaultValue": null,
      "type": "String"
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroups_private_nsg_name')]",
      "apiVersion": "2018-02-01",
      "location": "australiaeast",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "766da8e1-4bfb-4fbc-af28-656a4d17877b",
        "securityRules": [
          {
            "name": "ssh",
            "etag": "W/\"189a8962-9753-44c2-b64d-a052f82c7e17\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow SSH Access from home IP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "203.206.64.243",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ],
        "defaultSecurityRules": [
          {
            "name": "AllowVnetInBound",
            "etag": "W/\"189a8962-9753-44c2-b64d-a052f82c7e17\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureLoadBalancerInBound",
            "etag": "W/\"189a8962-9753-44c2-b64d-a052f82c7e17\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from azure load balancer",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 65001,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllInBound",
            "etag": "W/\"189a8962-9753-44c2-b64d-a052f82c7e17\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all inbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowVnetOutBound",
            "etag": "W/\"189a8962-9753-44c2-b64d-a052f82c7e17\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowInternetOutBound",
            "etag": "W/\"189a8962-9753-44c2-b64d-a052f82c7e17\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 65001,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllOutBound",
            "etag": "W/\"189a8962-9753-44c2-b64d-a052f82c7e17\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all outbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      },
      "dependsOn": []
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroups_public_web_nsg_name')]",
      "apiVersion": "2018-02-01",
      "location": "australiaeast",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "f30a39b0-4d38-4dbd-97ca-92b60c050aa3",
        "securityRules": [
          {
            "name": "ssh",
            "etag": "W/\"931d0635-8250-441b-acf6-e73068601725\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow SSH Access from home IP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "203.206.64.243",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ],
        "defaultSecurityRules": [
          {
            "name": "AllowVnetInBound",
            "etag": "W/\"931d0635-8250-441b-acf6-e73068601725\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureLoadBalancerInBound",
            "etag": "W/\"931d0635-8250-441b-acf6-e73068601725\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from azure load balancer",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 65001,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllInBound",
            "etag": "W/\"931d0635-8250-441b-acf6-e73068601725\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all inbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowVnetOutBound",
            "etag": "W/\"931d0635-8250-441b-acf6-e73068601725\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowInternetOutBound",
            "etag": "W/\"931d0635-8250-441b-acf6-e73068601725\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 65001,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllOutBound",
            "etag": "W/\"931d0635-8250-441b-acf6-e73068601725\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all outbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      },
      "dependsOn": []
    },
    {
      "type": "Microsoft.Network/networkWatchers",
      "name": "[parameters('networkWatchers_australiaeast_watcher_name')]",
      "apiVersion": "2018-02-01",
      "location": "australiaeast",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "flowLogs": [],
        "runningOperationIds": []
      },
      "dependsOn": []
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworks_labnet_name')]",
      "apiVersion": "2018-02-01",
      "location": "australiaeast",
      "tags": {},
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "962f3a22-b228-4cb8-8f6e-919c4c0a8b9b",
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "dhcpOptions": {
          "dnsServers": []
        },
        "subnets": [
          {
            "name": "public",
            "etag": "W/\"f08628e4-3564-4fe8-ab7b-61c9b355126c\"",
            "properties": {
              "provisioningState": "Succeeded",
              "addressPrefix": "10.0.1.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_public_web_nsg_name'))]"
              },
              "serviceEndpoints": [
                {
                  "provisioningState": "Succeeded",
                  "service": "Microsoft.Storage",
                  "locations": [
                    "australiaeast",
                    "australiasoutheast"
                  ]
                },
                {
                  "provisioningState": "Succeeded",
                  "service": "Microsoft.KeyVault",
                  "locations": [
                    "*"
                  ]
                },
                {
                  "provisioningState": "Succeeded",
                  "service": "Microsoft.Sql",
                  "locations": [
                    "australiaeast"
                  ]
                }
              ]
            }
          },
          {
            "name": "private",
            "etag": "W/\"f08628e4-3564-4fe8-ab7b-61c9b355126c\"",
            "properties": {
              "provisioningState": "Succeeded",
              "addressPrefix": "10.0.2.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_private_nsg_name'))]"
              },
              "serviceEndpoints": [
                {
                  "provisioningState": "Succeeded",
                  "service": "Microsoft.Storage",
                  "locations": [
                    "australiaeast",
                    "australiasoutheast"
                  ]
                },
                {
                  "provisioningState": "Succeeded",
                  "service": "Microsoft.KeyVault",
                  "locations": [
                    "*"
                  ]
                },
                {
                  "provisioningState": "Succeeded",
                  "service": "Microsoft.Sql",
                  "locations": [
                    "australiaeast"
                  ]
                }
              ]
            }
          }
        ],
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false,
        "enableVmProtection": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_public_web_nsg_name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_private_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('networkSecurityGroups_private_nsg_name'), '/', parameters('securityRules_ssh_name'))]",
      "apiVersion": "2018-02-01",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "description": "[concat('Allow SSH Access from home IP')]",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "203.206.64.243",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 100,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_private_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('networkSecurityGroups_public_web_nsg_name'), '/', parameters('securityRules_ssh_name_1'))]",
      "apiVersion": "2018-02-01",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "description": "[concat('Allow SSH Access from home IP')]",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "203.206.64.243",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 100,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_public_web_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "name": "[concat(parameters('virtualNetworks_labnet_name'), '/', parameters('subnets_public_name'))]",
      "apiVersion": "2018-02-01",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "addressPrefix": "10.0.1.0/24",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_public_web_nsg_name'))]"
        },
        "serviceEndpoints": [
          {
            "provisioningState": "Succeeded",
            "service": "Microsoft.Storage",
            "locations": [
              "australiaeast",
              "australiasoutheast"
            ]
          },
          {
            "provisioningState": "Succeeded",
            "service": "Microsoft.KeyVault",
            "locations": [
              "*"
            ]
          },
          {
            "provisioningState": "Succeeded",
            "service": "Microsoft.Sql",
            "locations": [
              "australiaeast"
            ]
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_labnet_name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_public_web_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "name": "[concat(parameters('virtualNetworks_labnet_name'), '/', parameters('subnets_private_name'))]",
      "apiVersion": "2018-02-01",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "addressPrefix": "10.0.2.0/24",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_private_nsg_name'))]"
        },
        "serviceEndpoints": [
          {
            "provisioningState": "Succeeded",
            "service": "Microsoft.Storage",
            "locations": [
              "australiaeast",
              "australiasoutheast"
            ]
          },
          {
            "provisioningState": "Succeeded",
            "service": "Microsoft.KeyVault",
            "locations": [
              "*"
            ]
          },
          {
            "provisioningState": "Succeeded",
            "service": "Microsoft.Sql",
            "locations": [
              "australiaeast"
            ]
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_labnet_name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_private_nsg_name'))]"
      ]
    }
  ]
}
